--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>MSquare(Emu)</title>
     </head>
+    <h1> MSquare (Emu)</h1>
     <body>
         <p>Legitimately the first personal site.</p>
     </body>
